- Allow to add AutoTimer based on events (from event view)
- Fix missing refresh of AutoTimer list after changes

1.1.10-lite:
Enigma2:
- Allow to configure length of search history

----- 1.1.11 and 1.1.12 were localization fixes ---

1.1.13:
- Fix possible crash since 1.1.10 if system memory was low
- Sharing to Facebook now has a default text
- Bouquet & Service List more reliable in delegate mode
- Fix Input Alerts on iOS 5
- Fix disappearing exact SNRdb/BER cells in Signal Finder

1.2.0:
- Improve scrolling performance in service list
- Fix possible layout problems right after initial configuration
- Also share event description via email
Enigma2:
- Add Support for Provider list and retrieving all services
- Service Editor available as In-App Purchase
- Allow to add/remove bookmarks
- Fix possible crash in Package Manager on the iPad
- Fix "prefer alternatives" setting in autotimer
- Fix Play/Pause button on advanced remote with Enigma2 3.2+

1.2.0-full:
- Continue to load EPG data for MultiEPG in Background

1.3.0:
- Add support for different themes (four schemes to begin with)
- Add Multi-Delete to Timer and Movie List
- Confirmation when adding a timer / sending a message etc succeeded
- Long press gesture in event list added (add timer)
- Support multiple harddrives in "About Receiver"
Enigma2:
- Support for the upcoming web interface 1.7.0
- Support for more recent AutoTimer features
- Allow to change timer tags
- Allow to filter movies by tags
- Allow to move movies between locations (requires web interface 1.7.0)
- Improve performance when filling tables

1.3.0-full:
Enigma2:
- Allow to edit AutoTimer settings (needs recent experimental plugin)

1.4.0:
- Fix some possible crashes
- Fix crash with mail composer if opened from help screen in the settings
- No longer reset 'More' on the iPad in low memory conditions
- Completely remove TouchXML
- Improved error recovery (and display) for XML parsers
Enigma:
- Rewritten XML parsers for increased performance